@@ -32,7 +32,7 @@ git clone https://github.com/elias-henni/quoridor-game.git
 1. Open your web browser and go to [https://gluonhq.com/products/javafx/](https://gluonhq.com/products/javafx/).
 2. Download the JavaFX SDK by selecting the following options:
 - OS: Choose your preferred operating system.
-- Version: Select **17.0.10**.
+- Version: Select **17.0.10**. (If this version is not avaliable, download the lastest LTS version)
 - Architecture: Choose the appropriate architecture for your system.
 - Type: Select **SDK**.
 3. Once the download is complete, locate the downloaded JavaFX SDK file and unzip it.
@@ -46,6 +46,8 @@ git clone https://github.com/elias-henni/quoridor-game.git
 ```
 java --module-path ./javafx-sdk-17.0.10/lib --add-modules javafx.controls,javafx.fxml -jar quoridor-game/quoridor-game.jar
 ```
+- If you downloaded a different version of the javafx sdk then you will need to match the version number that you downloaded in the command above
+- For example: ```java --module-path ./javafx-sdk-**17.0.11**/lib --add-modules javafx.controls,javafx.fxml -jar quoridor-game/quoridor-game.jar```
 
 
 This command will launch the game and allow you to start playing.
